# gowa-python

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gowa_sdk/: __init__.py  models.py
src/gowa_sdk/mixins/: chat.py  group.py  message.py  send.py
tests/: test_client.py
