[project]
name = "gowa"
version = "0.1.0"
description = "Async Python SDK for go-whatsapp-web-multidevice"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "wa-llm maintainers" },
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.6.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gowa_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gowa_sdk",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
